# HydraDesk

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  TERMS.md  THIRD_PARTY_NOTICES.md  install.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: detect.rs  doctor.rs  main.rs  output.rs  rdp.rs  setup.rs
docs/: release-notes-v1.0.0.md
